cmake_minimum_required(VERSION 3.5)
project(Asyncout)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
include_directories(/usr/local/include)
include_directories(./include/)
include_directories(./src/)
link_directories(./src/)
link_directories(/usr/local/lib)
add_subdirectory(src)
add_subdirectory(example)
